style.css
/* background image */
body {
  background-image: url(images/street.jpg);
  background-size: cover;
  background-attachment: fixed;
  background-position: center; 
}

/* Search Box */
#search {
  width: 500px;
  background-color: rgba(200, 200, 200, 0.7);
  box-shadow: 0px 0px 10px black;

  position: relative;
  margin: 20px auto;
}

#search input {
  background: none;
  color: #111;
  border: none;
  outline-width: 0px;
  font-size: 16px;
  font-weight: bold;
  font-family: Verdana;
  padding: 5px;
}

/* Time */
#time {
  color: #eee;

  z-index: 5;
  position: absolute;
  top: 10px;
  right: 10px;

  color: #CCC;
  font-weight: bold;
  font-size: 16px;
  font-family: Arial;
}

/* Newspages */
ul.newspage {
  background-color: rgba(200, 200, 200, 0.7); 
  border-radius: 1px;
  padding: 20px;
  list-style-type: none;
  box-shadow: 0px 0px 10px black;
  font-family: Verdana;
  
  font-size: 12px;
  width: 600px;
  line-height: 20px; 

  margin: 20px auto;
  position: relative; 

  display: inline-block; /* display lists next to each other */
}

.newspage a {
  text-decoration: none;
  color: #111;
}

.newspage a:visited {
  color: #444;
}

.newspage a:hover {

  font-weight: bold;
}

/* Bookmarks */
ul#bookmarks {
    margin: 20px auto;
    position: relative;
    width: 1020px;
}

#bookmarks a {
  text-decoration: none;
  color: #CCC;
  font-weight: bold;
  font-size: 16px;
  font-family: Verdana;
}

#bookmarks li {
  display: inline;
  list-style-type: none;
  padding-right: 20px;

}

/* experimental round buttons for future use */
#spielgrube {
  width: 100px;
  height: 100px;
  background-color: rgba(200, 200, 200, 0.2); 
  border-radius: 200px;
  box-shadow: 0px 0px 10px black;
  background-size: auto 100%;
  background-attachment: fixed;
  background-position: center;
  margin: 20px auto;
  padding: 5px;
  position: relative;

  display: none;
}

div img {
  width: 100px;
  height: 100px;
  border-radius: 100px;
}

/* Rain background sound is disabled for now */
#rain {
  display: none;
}

/* Mascot */
#mascot {
  z-index: 5;
  position: fixed;
  bottom: -15px;
  right: -5px;
  height: 500px;
  pointer-events: none;
}

span.remove_news {
  cursor: pointer;
}

